Sat Aug 30 20:03:36 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: implement NULL.

	* test: use it.

Sat Aug 30 20:07:18 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java: ptr==ptr should
	  work.

	* net/loveruby/cflat/compiler/TypeChecker.java: ptr&&ptr should
	  work.

	* net/loveruby/cflat/compiler/TypeChecker.java: any==any should
	  always returns int.

	* net/loveruby/cflat/compiler/CodeGenerator.java: ditto.

	* test: test it.

Sat Aug 30 18:00:17 2008  Minero Aoki  <aamine@loveruby.net>

	* test/test_cbc.sh: test overrapped lvar.

Sat Aug 30 17:38:15 2008  Minero Aoki  <aamine@loveruby.net>

	* test/assign.cb: test case was wrong (caused SEGV).  I don't know
	  why this test case did not crash.

	* test/test_cbc.sh: follow it.

Sat Aug 30 17:35:00 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: lvar overrapped
	  allocation.

	* net/loveruby/cflat/ast/LocalScope.java: export children.

Fri Aug 29 18:24:43 2008  Minero Aoki  <aamine@loveruby.net>

	* cbc: surround path variables by double quotes.

Fri Aug 29 17:18:03 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java
	  (allocateLocalVariables): refactoring:
          stackWordSize -> stackAlignment.

Fri Aug 29 17:11:50 2008  Minero Aoki  <aamine@loveruby.net>

	* build.xml: test entry point is now run.sh.

Fri Aug 29 17:04:39 2008  Minero Aoki  <aamine@loveruby.net>

	* test/Makefile: testing entry point is run.sh.

	* test/shunit.sh: add "shunit_" prefix for all internal functions.

	* test/run.sh: load test_*.sh to support multiple test case files.

	* test/run.sh: accept command line arguments as test case files.

	* test/test.sh -> test/test_cbc.sh

	* test/test2.cb -> test/syntax1.cb

	* test/test3.cb -> test/syntax2.cb

	* test/test4.cb -> test/syntax3.cb

Fri Aug 29 16:35:39 2008  Minero Aoki  <aamine@loveruby.net>
