@@ -1,3 +1,13 @@
+Sun Aug 31 15:17:05 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/ast/Declarations.java: reject duplicated
+	  symbols to support duplicated import.
+
+	* net/loveruby/cflat/compiler/LibraryLoader.java: should return
+	  previous loaded symbols for the same import file.
+
+	* test: test duplicated import.
+
 Sat Aug 30 20:03:36 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/parser/Parser.jj: implement NULL.
